--- a/index.html
+++ b/index.html
@@ -16,6 +16,15 @@
     <!-- Messages will appear here -->
   </main>
 
+  <div class="ai-conversation-control">
+    <button id="start-ai-conversation" title="Start AI Girlfriend-Boyfriend Conversation">
+      💑 Start AI Couple Chat
+    </button>
+    <button id="stop-ai-conversation" title="Stop AI Conversation" disabled>
+      🛑 Stop Chat
+    </button>
+  </div>
+
   <div class="input-area">
     <button id="mic-btn" title="Speak to Sara 🎤">🎤</button>
     <input type="text" id="text-input" placeholder="Type something to Sara..." />
